separate common/different functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,14 @@
 export(cbind_na)
 export(ceiling_signif)
 export(common_colnames)
+export(common_items)
+export(common_rows)
 export(count_how_many_na_per_column)
 export(count_how_many_string_per_column)
 export(count_how_many_zero_per_column)
 export(count_rows_with_na)
+export(different_colnames)
+export(different_items)
 export(get_columns_with_all_na)
 export(get_columns_with_any_na)
 export(rma)
