--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(get_quantiles)
 export(grep_and_filter_vector)
 export(perc)
 export(rma)
+export(setwd_to_file_path)
 export(show_rows_with_na)
 export(trunc_signif)
 export(which_items_are_duplicated)
