White ggplot theme

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(setwd_to_file_path)
 export(show_rows_with_na)
 export(trunc_signif)
 export(which_items_are_duplicated)
+export(white_theme)
 export(write_pvalue_string)
 import(dplyr)
 import(magrittr)
